[gd_scene load_steps=8 format=3 uid="uid://bxhkm41gc4gl6"]

[ext_resource type="Texture2D" uid="uid://cljabjindmtnw" path="res://assets/survivor-move_rifle_0.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dsm1gfm6gg055" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="AudioStream" uid="uid://ddm52lcu1s1rw" path="res://sfx/walther-p38-firing-sound-effect-11651.mp3" id="3_qhqgy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 57.0
height = 148.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qhqgy"]
radius = 52.0
height = 134.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health"]
bg_color = Color(0.2, 0.8, 0.2, 1.0)

[sub_resource type="Theme" id="Theme_health"]
theme_override_styles/fill = SubResource("StyleBoxFlat_health")

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 33
script = ExtResource("1_g2els")

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(61, 49)
texture = ExtResource("1_3vyb7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 61)
shape = SubResource("CapsuleShape2D_g2els")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-1, 61)
shape = SubResource("CapsuleShape2D_qhqgy")

[node name="CamRemoteTransform" type="RemoteTransform2D" parent="."]

[node name="ShootRayCast" type="RayCast2D" parent="."]
position = Vector2(193, 97)
target_position = Vector2(1000, 0)
collision_mask = 9
collide_with_areas = true

[node name="ShootSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="HealthBarContainer" type="CanvasLayer" parent="."]
layer = 10

[node name="HealthBar" type="ProgressBar" parent="HealthBarContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
max_value = 4.0
value = 4.0
show_percentage = false
theme = SubResource("Theme_health")

[node name="StaminaBar" type="ProgressBar" parent="HealthBarContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 90.0
max_value = 1.0
value = 1.0
show_percentage = false

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
